--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>カラーピッカー</title>
+    <title>カラーピッカー（カラーコードを編集・コピー・画像から色抽出）</title>
+    <meta name="description" content="WEB上で動くシンプルなカラーピッカーツールです。画面の横に置きながら作業をすることを想定しています。">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
